# Flax.jl

./: .gitignore  Project.toml  README.md  install_python.jl  pyproject.toml
py/: flax_ex.py
src/: Flax.jl  layers.jl
test/: layers.jl  runtests.jl
